# nvflex-rs

./: .gitmodules  Cargo.toml  README.md
bevy-flex-plugin/: Cargo.toml
bevy-flex-plugin/examples/demo/: Cargo.toml
bevy-flex-plugin/examples/demo/src/: main.rs
bevy-flex-plugin/src/: lib.rs
nvflex/: Cargo.toml  README.md
nvflex-sys/: Cargo.toml  README.md  build.rs  wrapper.hpp
nvflex-sys/examples/simple/: Cargo.toml
nvflex-sys/examples/simple/src/: main.rs
nvflex-sys/src/: embed.rs  lib.rs
nvflex-wrapper/: Cargo.toml
nvflex-wrapper/examples/bevy_demo/: .gitignore  Cargo.toml
nvflex-wrapper/examples/bevy_demo/.cargo/: config.toml
nvflex-wrapper/examples/bevy_demo/src/: main.rs
nvflex-wrapper/examples/simple/: Cargo.toml
nvflex-wrapper/examples/simple/src/: main.rs
nvflex-wrapper/src/: context.rs  lib.rs  params.rs  shape.rs  utils.rs  vector.rs
nvflex/examples/bevy-demo/: Cargo.toml
nvflex/examples/bevy-demo/.cargo/: config.toml
nvflex/examples/bevy-demo/src/: main.rs
nvflex/examples/bevy_demo/: Cargo.toml
nvflex/examples/bevy_demo/src/: main.rs
nvflex/examples/simple/: Cargo.toml
nvflex/examples/simple/src/: main.rs
nvflex/src/: buffer.rs  context.rs  ext.rs  lib.rs  library.rs  mesh.rs  particle_spawner.rs  shape.rs  solver.rs  types.rs  vector.rs  world.rs
