[package]
name = "nvflex-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[build-dependencies]
bindgen = "0.66.1"

[dependencies]
cfg-if = "1.0.0"

[features]
default = ["ext", "d3d"]

ext = [] # link FleX ext libs
d3d = [] # link d3d libs
cuda = [] # link cuda libs
embed_libs = [] # embed FleX libraries inside the executable (TODO: find a way to make FleX load DLLs from memory)
