[package]
name = "nvflex-sys"
version = "0.1.0"
edition = "2021"
description = "NVIDIA FleX bindings for Rust"
authors = ["zeozeozeo"]
documentation = "https://docs.rs/nvflex-sys"
homepage = "https://github.com/zeozeozeo/nvflex-rs"
readme = "README.md"
keywords = ["flex", "nvidia", "physics", "simulation", "bindings"]
license = "BSL-1.0"
categories = ["simulation", "external-ffi-bindings", "game-development"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[build-dependencies]
bindgen = "0.66.1"

[dependencies]
cfg-if = "1.0.0"

[features]
default = ["ext", "d3d"]

ext = [] # link FleX ext libs
d3d = [] # link d3d libs
cuda = [] # link cuda libs
