[package]
name = "bevy_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvflex = { path = "../../" }
bevy = "0.11.0"
smooth-bevy-cameras = "0.9.0"
mint = "0.5.9"
env_logger = "0.10.0"
fastrand = "2.0.0"
